# TicTacToeBot

./: CMakeLists.txt  main.cpp  menu.cpp  menu.h
Bot/: myBot.h
Console/: myConsole.h
DynamicArray/: myDynamicArray.h
Field/: myField.cpp  myField.h
GoogleTests/: ArraySequenceTests.cpp  CMakeLists.txt  DynamicArrayTests.cpp
Sequence/: ArraySequenceTest.cpp  ArraySequenceTest.h  myArraySequence.h  mySequence.h
